[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Back_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Miscellaneous/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Fonts/Non_Nunito/domino_font/human_domino.otf" type="FontFile" id=3]
[ext_resource path="res://UI/Control/grey_panel.png" type="Texture2D" id=4]
[ext_resource path="res://UI/Control/green_button02.png" type="Texture2D" id=5]
[ext_resource path="res://UI/sprites/level1.png" type="Texture2D" id=6]
[ext_resource path="res://UI/sprites/level3.png" type="Texture2D" id=7]
[ext_resource path="res://UI/sprites/Domino Effect Logo.png" type="Texture2D" id=8]
[ext_resource path="res://UI/Control/yellow_button03.png" type="Texture2D" id=9]
[ext_resource path="res://UI/Control/green_button03.png" type="Texture2D" id=10]
[ext_resource path="res://UI/Control/yellow_button02.png" type="Texture2D" id=11]
[ext_resource path="res://UI/sprites/level2.png" type="Texture2D" id=12]
[ext_resource path="res://UI/sprites/level4.png" type="Texture2D" id=13]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Tutorial_Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="FontFile" id=2]
size = 64
outline_size = 2
outline_color = Color( 0.239216, 0.239216, 0.239216, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}

[node name="Tutorial" type="Node2D"]
script = ExtResource( 14 )

[node name="Tutorial_Container" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 1024.0
offset_bottom = 600.0
mouse_filter = 1
theme_override_constants/margin_right = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_left = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="Tutorial_Container"]
offset_left = 24.0
offset_top = 24.0
offset_right = 1000.0
offset_bottom = 576.0

[node name="Logo" type="TextureRect" parent="Tutorial_Container/HBoxContainer"]
offset_right = 500.0
offset_bottom = 500.0
custom_minimum_size = Vector2( 500, 500 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MenuContainer" type="MarginContainer" parent="Tutorial_Container/HBoxContainer"]
offset_left = 504.0
offset_right = 976.0
offset_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 50
theme_override_constants/margin_top = 125
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 125

[node name="Menu" type="NinePatchRect" parent="Tutorial_Container/HBoxContainer/MenuContainer"]
offset_left = 50.0
offset_top = 125.0
offset_right = 422.0
offset_bottom = 427.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin_left = 31
patch_margin_top = 28
patch_margin_right = 29
patch_margin_bottom = 28

[node name="MarginContainer" type="MarginContainer" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 79.0
offset_right = -3.0
offset_bottom = -78.0
theme_override_constants/margin_right = 80
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 80
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer"]
offset_left = 80.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 135.0
theme_override_constants/separation = 25

[node name="Start" type="TextureButton" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer"]
offset_right = 210.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 5
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Start/MarginContainer"]
offset_top = 4.0
offset_right = 210.0
offset_bottom = 41.0
theme = ExtResource( 2 )
text = "Start"
align = 1
valign = 1

[node name="Select_Level" type="VBoxContainer" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer"]
offset_top = 75.0
offset_right = 210.0
offset_bottom = 125.0
theme_override_constants/separation = 0

[node name="Select" type="TextureButton" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Select_Level"]
offset_right = 210.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 50 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 5
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Select_Level/Select"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Select_Level/Select/MarginContainer"]
offset_top = 4.0
offset_right = 210.0
offset_bottom = 41.0
theme = ExtResource( 2 )
text = "Select Level"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial_Container"]
root_node = NodePath("../..")
autoplay = "start"
anims/start = SubResource( 1 )

[node name="LevelSelect_Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -577.0
offset_right = 1014.0
offset_bottom = -19.0
theme_override_constants/margin_right = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_left = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect_Container"]
offset_left = 24.0
offset_top = 24.0
offset_right = 970.0
offset_bottom = 534.0
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="LevelSelect_Container/VBoxContainer"]
offset_right = 946.0
offset_bottom = 74.0
size_flags_vertical = 5
theme_override_fonts/font = SubResource( 2 )
text = "Select Level"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="LevelSelect_Container/VBoxContainer"]
offset_top = 114.0
offset_right = 946.0
offset_bottom = 446.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="LevelSelect_Container/VBoxContainer/CenterContainer"]
offset_left = 173.0
offset_right = 773.0
offset_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 50
theme_override_constants/h_separation = 100
columns = 2

[node name="Char_Creation" type="TextureButton" parent="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer"]
offset_right = 250.0
offset_bottom = 141.0
custom_minimum_size = Vector2( 250, 141 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Pond_Choices" type="TextureButton" parent="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer"]
offset_left = 350.0
offset_right = 600.0
offset_bottom = 141.0
custom_minimum_size = Vector2( 250, 141 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 4

[node name="Domino_Game" type="TextureButton" parent="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer"]
offset_top = 191.0
offset_right = 250.0
offset_bottom = 332.0
custom_minimum_size = Vector2( 250, 141 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Virtual_World" type="TextureButton" parent="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer"]
offset_left = 350.0
offset_top = 191.0
offset_right = 600.0
offset_bottom = 332.0
custom_minimum_size = Vector2( 250, 141 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelSelect_Container"]
anims/start = SubResource( 3 )

[node name="Back_Button" parent="." instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -83.0
offset_right = 174.0
offset_bottom = -30.0

[connection signal="pressed" from="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Tutorial_Container/HBoxContainer/MenuContainer/Menu/MarginContainer/VBoxContainer/Select_Level/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer/Char_Creation" to="." method="_on_Char_Creation_pressed"]
[connection signal="pressed" from="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer/Pond_Choices" to="." method="_on_Pond_Choices_pressed"]
[connection signal="pressed" from="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer/Domino_Game" to="." method="_on_Domino_Game_pressed"]
[connection signal="pressed" from="LevelSelect_Container/VBoxContainer/CenterContainer/GridContainer/Virtual_World" to="." method="_on_Virtual_World_pressed"]
